--- a/style.css
+++ b/style.css
@@ -46,12 +46,6 @@ legend {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.h1 {
-    font-family: "Sofia", sans-serif;
-    color: red;
-    text-align: center;
-}
-
 .input {
     width: 100%;
     height: 40px;
@@ -87,7 +81,7 @@ input[type="text"] {
 }
 
 
-input[type=button], input[type="reset"] {
+input[type=submit], input[type="reset"] {
     border-radius: 10px;
     border: none;
     padding: 12px 20px;
@@ -101,7 +95,7 @@ input[type=reset] {
     float: right;
 }
 
-input[type=button]:hover {
+input[type=submit]:hover {
     background-color: #FF4C29;
     color: #fff;
 }
